<resources>
    <string name="app_name">Medarogya</string>
    <string name="caption">Patient Appointment App</string>
    <string name="sign_in">Login</string>
    <string name="update">Update</string>
    <!-- Strings related to login -->
    <string name="user_name">Name</string>
    <string name="user_city">City</string>
    <string name="user_email">User Email</string>
    <string name="user_number">Mobile Number</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password </string>
    <string name="email">Email</string>
    <string name="card_no">Card Number</string>
    <string name="conform_password">Confirm password </string>
    <string name="add_op">Add Appointment</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="dont_text">Don\'t have an account?</string>
    <string name="already_text">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="continue_for_">Continue for Registration</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions </string>
    <string name="signin">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_sub_text">We just need your registerd Email to send you password reset instruction</string>
    <string name="op_title">New Op Registration</string>
    <string name="default_notification_channel_id">medspace channel</string>
    <string name="notifications_admin_channel_name">medspace</string>
    <string name="populer_cities">Popular Cities</string>
    <string name="track_order">Track Order</string>
    <string name="call_to_order">Call to Order</string>
    <string name="order_medicenes">Order Medicine</string>
    <string name="myorders">My Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_the_patient">Name</string>
    <string name="whatsappno">WhatsApp Number</string>
    <string name="threedot">●  ●  ●</string>
    <string name="nointernet">No Internet</string>
    <string name="serverproblem">Problem occured in server side</string>


</resources>
