<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_vertical_margin"

        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

         android:visibility="gone"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"

                android:src="@drawable/profile_icon" />

            <EditText
                android:id="@+id/cardno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="#fff"
                android:hint="@string/card_no"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="15"
                android:singleLine="true"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/user" />

            <EditText

                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:textCursorDrawable="@color/colorPrimary"
                android:focusableInTouchMode="true"
                android:background="@color/colorWhite"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"

                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/gmail" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/colorWhite"
                android:hint="@string/user_email"
                android:textCursorDrawable="@color/colorPrimary"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/mobile" />

            <EditText
                android:id="@+id/molibe_nmbr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/colorWhite"
                android:hint="@string/user_number"
                android:inputType="number"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorPrimary"
                android:focusableInTouchMode="true"
                android:maxLength="10"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/city" />

            <EditText

                android:id="@+id/user_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/colorWhite"
                android:hint="@string/user_city"
                android:textCursorDrawable="@color/colorPrimary"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:maxLines="1"

                android:singleLine="true" />

        </LinearLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/sign_button_shape"
                android:text="@string/sign_up"
                android:textAllCaps="false"

                android:textColor="@color/colorWhite" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/dont_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_text"
                android:textSize="@dimen/signup_text_size" />

            <TextView
                android:id="@+id/txt_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/dont_text"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/signup_text_size"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>
</ScrollView>