<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".activity.ForgotPasswordActivity">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_black"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Forgot Password"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="@dimen/margin_space"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    android:textStyle="bold"
    />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_sub_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/margin_space"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/sign_text_shape"
            android:layout_margin="@dimen/margin_space"
            android:padding="10dp"

            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"
                android:src="@drawable/gmail"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="DuplicateIds" />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_space"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/submit"
                android:textAllCaps="false"

                android:background="@drawable/sign_button_shape"
                android:textColor="@color/colorWhite"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            >
            <TextView
                android:id="@+id/dont_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_text"
                android:textSize="@dimen/signup_text_size"
                />
            <TextView
                android:id="@+id/txt_sign_in"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/dont_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"

                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/signup_text_size"
                />
        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>