<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activity.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

       </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:text="Login"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/sign_text_shape"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:id="@+id/user_name_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/mobile" />

        <EditText
            android:id="@+id/edt_user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#fff"
            android:hint="@string/user_number"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/sign_text_shape"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/user_psw_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"

            android:src="@drawable/password" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="#fff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/check_remember_me"
            style="@style/MyRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/remember_me"
            android:textSize="@dimen/remember_text_size"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:text="Register"
                android:textColor="@color/colorBlack"

                android:textSize="15sp" />

            <TextView
                android:id="@+id/img_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
              android:textColor="@color/colorBlack"
                android:gravity="end|center"
                android:text="Forgot Password"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/sign_button_shape"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>